 - Prepare for C++20 `std::ssize()`.
 - Dropped test12, which didn't add much and tried to read null strings.
 - Support string conversion for `std::monostate`.  (#409)
 - Consistent "named constructors" for `stream_to` and `stream_from`.
 - New `table_path` type.
 - New `connection` methods `quote_table` and `quote_columns`.
 - Lots of deprecated stream constructors.
7.3.1
 - New, simpler API for large objects: `blob` ("binary large object").
 - `largeobject` and friends are now deprecated.
 - Fix visibility issue on gcc/clang, especially on macOS.  (#395)
 - Use "pure" & "visibility" attributes if they work, regardless of compiler.
 - More deprecated items now have the `[[deprecated]]` attribute.
 - Document the concept of transaction focus.
 - Error messages more often report query description, if given.
 - Suppress spurious deprecation messages on Visual Studio. (#402)
 - Correct error when prepared/param statement clashes with tx focus. (#401)
 - `from_stream` with `from_query` now has a convenient factory function.
 - Removed some obsolete scripts from the `tools/` directory.
7.3.0
 - `stream_to` now quotes and escapes its table name.
 - Removed `transaction_base::classname()`.  Did anyone ever use it?
 - Internal reorg of the `transaction` and `transactionfocus` hierarchies.
 - Removed the only case of virtual inheritance, related to `namedclass`.
 - Internal `concat()` for faster, simpler string concatentation.
 - Fix compile omission in string conversions for `nullptr_t`.
 - `pqxx::size_buffer()` can now size multiple values at once.
 - `multi_to_string()` to convert multiple values into one `std::string`.
 - Implicit `zview` constructor from `char const *`. (#389)
 - Many `std::string&` parameters are now `zview` or `std::string_view`.
 - Now checking statement parameter lengths for overflow.
 - `#include <array>` in connection.cxx.  (#394)
7.2.1
 - Fix infinite loop in converting `char *` to string. (#377)
 - Deprecated `namedclass`.