@@ -42,14 +42,17 @@ public:
   using size_type = result_size_type;
   using difference_type = result_difference_type;
 
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
   /// Create an iterator, but in an unusable state.
   const_result_iterator() noexcept = default;
   /// Copy an iterator.
   const_result_iterator(const_result_iterator const &) noexcept = default;
   /// Move an iterator.
   const_result_iterator(const_result_iterator &&) noexcept = default;
+
   /// Begin iterating a @c row.
   const_result_iterator(row const &t) noexcept : row{t} {}
+#include "pqxx/internal/ignore-deprecated-post.hxx"
 
   /**
    * @name Dereferencing operators
@@ -67,8 +70,11 @@ public:
   //@{
   /// Dereference the iterator.
   [[nodiscard]] pointer operator->() const { return this; }
+
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
   /// Dereference the iterator.
   [[nodiscard]] reference operator*() const { return row{*this}; }
+#include "pqxx/internal/ignore-deprecated-post.hxx"
   //@}
 
   /**
@@ -88,13 +94,17 @@ public:
   //@{
   const_result_iterator &operator=(const_result_iterator const &rhs)
   {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
     row::operator=(rhs);
+#include "pqxx/internal/ignore-deprecated-post.hxx"
     return *this;
   }
 
   const_result_iterator &operator=(const_result_iterator &&rhs)
   {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
     row::operator=(std::move(rhs));
+#include "pqxx/internal/ignore-deprecated-post.hxx"
     return *this;
   }
 
@@ -123,7 +133,12 @@ public:
   }
 
   /// Interchange two iterators in an exception-safe manner.
-  void swap(const_result_iterator &other) noexcept { row::swap(other); }
+  void swap(const_result_iterator &other) noexcept
+  {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
+    row::swap(other);
+#include "pqxx/internal/ignore-deprecated-post.hxx"
+  }
   //@}
 
   /**
